--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -713,25 +713,25 @@ img { max-width: 100%; }
    Docs: http://tachyons.io/docs/typography/font-family/
 
 */
-.sans-serif { font-family: -apple-system, BlinkMacSystemFont, 'avenir next', avenir, 'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial, sans-serif; }
-.serif { font-family: georgia, times, serif; }
+.sans-serif { font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Ubuntu, Roboto, Noto, "Segoe UI", Arial, sans-serif; }
+.serif { font-family: Georgia, Times, serif; }
 .system-sans-serif { font-family: sans-serif; }
 .system-serif { font-family: serif; }
 /* Monospaced Typefaces (for code) */
 /* From http://cssfontstack.com */
-code, .code { font-family: Consolas, monaco, monospace; }
-.courier { font-family: 'Courier Next', courier, monospace; }
+code, .code { font-family: Consolas, Monaco, Monospace; }
+.courier { font-family: "Courier Next", Courier, Monospace; }
 /* Sans-Serif Typefaces */
-.helvetica { font-family: 'helvetica neue', helvetica, sans-serif; }
-.avenir { font-family: 'avenir next', avenir, sans-serif; }
+.helvetica { font-family: "Helvetica Neue", Helvetica, sans-serif; }
+.avenir { font-family: "Avenir Next", Avenir, sans-serif; }
 /* Serif Typefaces */
-.athelas { font-family: athelas, georgia, serif; }
-.georgia { font-family: georgia, serif; }
-.times { font-family: times, serif; }
+.athelas { font-family: Athelas, Georgia, serif; }
+.georgia { font-family: Georgia, serif; }
+.times { font-family: Times, serif; }
 .bodoni { font-family: "Bodoni MT", serif; }
 .calisto { font-family: "Calisto MT", serif; }
-.garamond { font-family: garamond, serif; }
-.baskerville { font-family: baskerville, serif; }
+.garamond { font-family: Garamond, serif; }
+.baskerville { font-family: Baskerville, serif; }
 /*
 
    FONT STYLE
