--- a/src/_font-family.css
+++ b/src/_font-family.css
@@ -8,17 +8,17 @@
 
 .sans-serif {
   font-family: -apple-system, BlinkMacSystemFont,
-               'avenir next', avenir,
-               'helvetica neue', helvetica,
-               ubuntu,
-               roboto, noto,
-               'segoe ui', arial,
+               "Avenir Next", Avenir,
+               "Helvetica Neue", Helvetica,
+               Ubuntu,
+               Roboto, Noto,
+               "Segoe UI", Arial,
                sans-serif;
 }
 
 .serif {
-  font-family: georgia,
-               times,
+  font-family: Georgia,
+               Times,
                serif;
 }
 
@@ -36,26 +36,26 @@
 /* From http://cssfontstack.com */
 code, .code {
   font-family: Consolas,
-               monaco,
-               monospace;
+               Monaco,
+               Monospace;
 }
 
 .courier {
-  font-family: 'Courier Next',
-               courier,
-               monospace;
+  font-family: "Courier Next",
+               Courier,
+               Monospace;
 }
 
 
 /* Sans-Serif Typefaces */
 
 .helvetica {
-  font-family: 'helvetica neue', helvetica,
+  font-family: "Helvetica Neue", Helvetica,
                sans-serif;
 }
 
 .avenir {
-  font-family: 'avenir next', avenir,
+  font-family: "Avenir Next", Avenir,
                sans-serif;
 }
 
@@ -63,18 +63,18 @@ code, .code {
 /* Serif Typefaces */
 
 .athelas {
-  font-family: athelas,
-               georgia,
+  font-family: Athelas,
+               Georgia,
                serif;
 }
 
 .georgia {
-  font-family: georgia,
+  font-family: Georgia,
                serif;
 }
 
 .times {
-  font-family: times,
+  font-family: Times,
                serif;
 }
 
@@ -89,12 +89,12 @@ code, .code {
 }
 
 .garamond {
-  font-family: garamond,
+  font-family: Garamond,
                serif;
 }
 
 .baskerville {
-  font-family: baskerville,
+  font-family: Baskerville,
                serif;
 }
 
