--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -832,6 +832,7 @@ code, .code { font-family: Consolas, Monaco, Monospace; }
 .h-75 { height: 75%; }
 .h-100 { height: 100%; }
 .min-h-100 { min-height: 100%; }
+.max-h-100 { max-height: 100%; }
 /* Screen Height Percentage */
 .vh-25 { height: 25vh; }
 .vh-50 { height: 50vh; }
@@ -995,6 +996,7 @@ code, .code { font-family: Consolas, Monaco, Monospace; }
 .w-third { width: 33.33333%; }
 .w-two-thirds { width: 66.66667%; }
 .w-auto { width: auto; }
+.max-w-100 { max-width: 100%; }
 /*
 
     OVERFLOW
@@ -2205,6 +2207,7 @@ code, .code { font-family: Consolas, Monaco, Monospace; }
  .h-75-ns { height: 75%; }
  .h-100-ns { height: 100%; }
  .min-h-100-ns { min-height: 100%; }
+ .max-h-100-ns { max-height: 100%; }
  .vh-25-ns { height: 25vh; }
  .vh-50-ns { height: 50vh; }
  .vh-75-ns { height: 75vh; }
@@ -2251,6 +2254,7 @@ code, .code { font-family: Consolas, Monaco, Monospace; }
  .w-third-ns { width: 33.33333%; }
  .w-two-thirds-ns { width: 66.66667%; }
  .w-auto-ns { width: auto; }
+ .max-w-100-ns { max-width: 100%; }
  .overflow-visible-ns { overflow: visible; }
  .overflow-hidden-ns { overflow: hidden; }
  .overflow-scroll-ns { overflow: scroll; }
@@ -2631,6 +2635,7 @@ code, .code { font-family: Consolas, Monaco, Monospace; }
  .h-75-m { height: 75%; }
  .h-100-m { height: 100%; }
  .min-h-100-m { min-height: 100%; }
+ .max-h-100-m { max-height: 100%; }
  .vh-25-m { height: 25vh; }
  .vh-50-m { height: 50vh; }
  .vh-75-m { height: 75vh; }
@@ -2677,6 +2682,7 @@ code, .code { font-family: Consolas, Monaco, Monospace; }
  .w-third-m { width: 33.33333%; }
  .w-two-thirds-m { width: 66.66667%; }
  .w-auto-m { width: auto; }
+ .max-w-100-m { max-width: 100%; }
  .overflow-visible-m { overflow: visible; }
  .overflow-hidden-m { overflow: hidden; }
  .overflow-scroll-m { overflow: scroll; }
@@ -3057,6 +3063,7 @@ code, .code { font-family: Consolas, Monaco, Monospace; }
  .h-75-l { height: 75%; }
  .h-100-l { height: 100%; }
  .min-h-100-l { min-height: 100%; }
+ .max-h-100-l { max-height: 100%; }
  .vh-25-l { height: 25vh; }
  .vh-50-l { height: 50vh; }
  .vh-75-l { height: 75vh; }
@@ -3103,6 +3110,7 @@ code, .code { font-family: Consolas, Monaco, Monospace; }
  .w-third-l { width: 33.33333%; }
  .w-two-thirds-l { width: 66.66667%; }
  .w-auto-l { width: auto; }
+ .max-w-100-l { max-width: 100%; }
  .overflow-visible-l { overflow: visible; }
  .overflow-hidden-l { overflow: hidden; }
  .overflow-scroll-l { overflow: scroll; }
