--- a/src/_heights.css
+++ b/src/_heights.css
@@ -47,6 +47,7 @@
 .h-100 { height: 100%; }
 
 .min-h-100 { min-height: 100%; }
+.max-h-100 { max-height: 100%; }
 
 /* Screen Height Percentage */
 
@@ -74,6 +75,7 @@
   .h-75-ns { height: 75%; }
   .h-100-ns { height: 100%; }
   .min-h-100-ns { min-height: 100%; }
+  .max-h-100-ns { max-height: 100%; }
   .vh-25-ns {  height:  25vh; }
   .vh-50-ns {  height:  50vh; }
   .vh-75-ns {  height:  75vh; }
@@ -94,6 +96,7 @@
   .h-75-m { height: 75%; }
   .h-100-m { height: 100%; }
   .min-h-100-m { min-height: 100%; }
+  .max-h-100-m { max-height: 100%; }
   .vh-25-m {  height:  25vh; }
   .vh-50-m {  height:  50vh; }
   .vh-75-m {  height:  75vh; }
@@ -114,6 +117,7 @@
   .h-75-l { height: 75%; }
   .h-100-l { height: 100%; }
   .min-h-100-l { min-height: 100%; }
+  .max-h-100-l { max-height: 100%; }
   .vh-25-l {  height:  25vh; }
   .vh-50-l {  height:  50vh; }
   .vh-75-l {  height:  75vh; }
