--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -1929,6 +1929,7 @@ code, .code { font-family: Consolas, Monaco, Monospace; }
 .z-3 { z-index: 3; }
 .z-4 { z-index: 4; }
 .z-5 { z-index: 5; }
+.z--1 { z-index: -1; }
 .z-999 { z-index: 999; }
 .z-9999 { z-index: 9999; }
 .z-max { z-index: 2147483647; }
