--- a/src/tachyons.css
+++ b/src/tachyons.css
@@ -57,6 +57,7 @@
 @import './_links';
 @import './_lists';
 @import './_max-widths';
+@import './_min-widths';
 @import './_widths';
 @import './_overflow';
 @import './_position';
